set(GUI_DEPENDECIES
  ${TESTING_DEPENDECIES}
)

add_subdirectory(ChannelAdapter)
add_subdirectory(ClassificationProxy)
add_subdirectory(ChannelProxy)
add_subdirectory(ClassificationAdapter)
add_subdirectory(ModelAdapter)
add_subdirectory(ModelFactory)
add_subdirectory(SampleAdapter)
# add_subdirectory(View2D)
# add_subdirectory(View3D)
#add_subdirectory(ItemAdapter)